--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,5 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+/src/main/resources/application-prod.properties
+/src/main/resources/application-dev.properties
