--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,26 @@
 plugins {
+    id 'java'
     id 'org.springframework.boot' version '2.7.0'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-    id 'java'
 }
 
 group 'de.pinguparty.pingu_train'
 version '1.0-SNAPSHOT'
+
+bootJar {
+    archiveFileName = "PinguTrain.jar"
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-   //implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.telegram:telegrambots-spring-boot-starter:6.0.1'
+
     implementation 'org.reflections:reflections:0.10.2'
-    //implementation 'org.telegram:telegrambots:6.0.1'
 }
 
 test {
