--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,19 @@
- telegram.command.prefix=/
- telegram.bot.token="5380143925:AAGp11WkxUT0-2tNWGqTc-8lrh34gME3Bnc"
+# Messenger bot configuration
+pingu_train.bot.username=${PINGU_TRAIN_BOT_NAME:PinguTrain_bot}
+pingu_train.bot.token=${PINGU_TRAIN_BOT_TOKEN:}
+pingu_train.bot.command.prefix=${PINGU_TRAIN_BOT_COMMAND_PREFIX:/}
+
+# Web configuration
+server.port=${PINGU_TRAIN_WEB_PORT:8080}
+
+# Persistence configuration
+spring.data.mongodb.host=${PINGU_TRAIN_MONGODB_HOST:mongodb}
+spring.data.mongodb.port=${PINGU_TRAIN_MONGODB_PORT:27017}
+spring.data.mongodb.username=${PINGU_TRAIN_MONGODB_USERNAME:root}
+spring.data.mongodb.password=${PINGU_TRAIN_MONGODB_PASSWORD:12345}
+
+# Logging configuration
+logging.level.root=info
+logging.level.org.springframework.web=warn
+logging.level.org.springframework.http=warn
+logging.level.org.mongodb.driver=warn
