--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,11 @@ spring.data.mongodb.port=${PINGU_TRAIN_MONGODB_PORT:27017}
 spring.data.mongodb.username=${PINGU_TRAIN_MONGODB_USERNAME:root}
 spring.data.mongodb.password=${PINGU_TRAIN_MONGODB_PASSWORD:12345}
 
+spring.rabbitmq.host=rabbitmq
+spring.rabbitmq.username=user
+spring.rabbitmq.password=12345
+spring.rabbitmq.port=5672
+
 # Logging configuration
 logging.level.root=info
 logging.level.org.springframework.web=warn
