--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
     implementation 'org.telegram:telegrambots-spring-boot-starter:6.0.1'
-
     implementation 'org.reflections:reflections:0.10.2'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 }
 
 test {
