--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,2 @@
-plugins {
-    id 'java'
-    id 'org.springframework.boot' version '2.7.0'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-}
-
-group 'de.pinguparty.pingu_train'
+group 'de.pinguparty.pingutrain'
 version '1.0-SNAPSHOT'
-
-bootJar {
-    archiveFileName = "PinguTrain.jar"
-}
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-amqp'
-    implementation 'org.telegram:telegrambots-spring-boot-starter:6.0.1'
-    implementation 'org.reflections:reflections:0.10.2'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
-}
-
-test {
-    useJUnitPlatform()
-}
