Restructured queue in Bot application

--- a/PinguTrainBot/src/main/resources/application.properties
+++ b/PinguTrainBot/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Messenger bot configuration
-pingu_train.bot.telegram.token=${PINGU_TRAIN_BOT_TELEGRAM_TOKEN:}
-pingu_train.bot.telegram.username=${PINGU_TRAIN_BOT_TELEGRAM_NAME:PinguTrain_bot}
+pingutrain.bot.telegram.token=${PINGU_TRAIN_BOT_TELEGRAM_TOKEN:}
+pingutrain.bot.telegram.username=${PINGU_TRAIN_BOT_TELEGRAM_NAME:PinguTrain_bot}
 
 # Web configuration
 server.port=${PINGU_TRAIN_BOT_WEB_PORT:8080}
@@ -11,10 +11,13 @@ spring.data.mongodb.port=${PINGU_TRAIN_BOT_MONGODB_PORT:27017}
 spring.data.mongodb.username=${PINGU_TRAIN_BOT_MONGODB_USERNAME:root}
 spring.data.mongodb.password=${PINGU_TRAIN_BOT_MONGODB_PASSWORD:12345}
 
-spring.rabbitmq.host=rabbitmq
-spring.rabbitmq.username=user
-spring.rabbitmq.password=12345
-spring.rabbitmq.port=5672
+# Message queuing configuration
+pingutrain.bot.queue.updates=${PINGU_TRAIN_BOT_QUEUE_UPDATES:updates}
+pingutrain.bot.queue.actions=${PINGU_TRAIN_BOT_QUEUE_ACTIONS:actions}
+spring.rabbitmq.host=${PINGU_TRAIN_BOT_RABBITMQ_HOST:rabbitmq}
+spring.rabbitmq.port=${PINGU_TRAIN_BOT_RABBITMQ_PORT:5672}
+spring.rabbitmq.username=${PINGU_TRAIN_BOT_RABBITMQ_USERNAME:user}
+spring.rabbitmq.password=${PINGU_TRAIN_BOT_RABBITMQ_PASSWORD:12345}
 
 # Logging configuration
 logging.level.root=info
