--- a/PinguTrainWorker/build.gradle
+++ b/PinguTrainWorker/build.gradle
@@ -1,17 +1,30 @@
 plugins {
     id 'java'
+    id 'org.springframework.boot' version '2.7.0'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 }
 
 group 'de.pinguparty.pingutrain'
 version '1.0-SNAPSHOT'
+
+bootJar {
+    archiveFileName = "PinguTrainWorker.jar"
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+    implementation project(':PinguTrainBot')
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+    implementation 'org.springframework.boot:spring-boot-starter-amqp'
+
+    implementation 'org.reflections:reflections:0.10.2'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+
+    implementation 'org.telegram:telegrambots-spring-boot-starter:6.0.1'
 }
 
 test {
