Added interaction model, completed cut through

--- a/PinguTrainBot/src/main/resources/application.properties
+++ b/PinguTrainBot/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.data.mongodb.username=${PINGU_TRAIN_BOT_MONGODB_USERNAME:root}
 spring.data.mongodb.password=${PINGU_TRAIN_BOT_MONGODB_PASSWORD:12345}
 
 # Message queuing configuration
-pingutrain.bot.queue.updates=${PINGU_TRAIN_BOT_QUEUE_UPDATES:updates}
-pingutrain.bot.queue.actions=${PINGU_TRAIN_BOT_QUEUE_ACTIONS:actions}
+pingutrain.bot.queue.messages=${PINGU_TRAIN_BOT_QUEUE_MESSAGES:userMessages}
+pingutrain.bot.queue.actions=${PINGU_TRAIN_BOT_QUEUE_ACTIONS:botActions}
 spring.rabbitmq.host=${PINGU_TRAIN_BOT_RABBITMQ_HOST:rabbitmq}
 spring.rabbitmq.port=${PINGU_TRAIN_BOT_RABBITMQ_PORT:5672}
 spring.rabbitmq.username=${PINGU_TRAIN_BOT_RABBITMQ_USERNAME:user}
