--- a/PinguTrainWorker/src/main/resources/application.properties
+++ b/PinguTrainWorker/src/main/resources/application.properties
@@ -1,12 +1,17 @@
+# Application configuration
+pingutrain.worker.command.prefix=/
+
 # Persistence configuration
 spring.data.mongodb.host=${PINGU_TRAIN_WORKER_MONGODB_HOST:mongodb}
 spring.data.mongodb.port=${PINGU_TRAIN_WORKER_MONGODB_PORT:27017}
 spring.data.mongodb.username=${PINGU_TRAIN_WORKER_MONGODB_USERNAME:root}
 spring.data.mongodb.password=${PINGU_TRAIN_WORKER_MONGODB_PASSWORD:12345}
+spring.data.mongodb.database=pingutrain
+spring.data.mongodb.authentication-database=admin
 
 # Message queuing configuration
-pingutrain.worker.queue.updates=${PINGU_TRAIN_WORKER_QUEUE_UPDATES:updates}
-pingutrain.worker.queue.actions=${PINGU_TRAIN_WORKER_QUEUE_ACTIONS:actions}
+pingutrain.worker.queue.messages=${PINGU_TRAIN_WORKER_QUEUE_MESSAGES:userMessages}
+pingutrain.worker.queue.actions=${PINGU_TRAIN_WORKER_QUEUE_ACTIONS:botActions}
 spring.rabbitmq.host=${PINGU_TRAIN_WORKER_RABBITMQ_HOST:rabbitmq}
 spring.rabbitmq.port=${PINGU_TRAIN_WORKER_RABBITMQ_PORT:5672}
 spring.rabbitmq.username=${PINGU_TRAIN_WORKER_RABBITMQ_USERNAME:user}
