--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ services:
             PINGU_TRAIN_BOT_MONGODB_PORT: 27017
             PINGU_TRAIN_BOT_MONGODB_USERNAME: root
             PINGU_TRAIN_BOT_MONGODB_PASSWORD: 12345
-            PINGU_TRAIN_BOT_QUEUE_UPDATES: updates
-            PINGU_TRAIN_BOT_QUEUE_ACTIONS: actions
+            PINGU_TRAIN_BOT_QUEUE_MESSAGES: userMessages
+            PINGU_TRAIN_BOT_QUEUE_ACTIONS: botActions
             PINGU_TRAIN_BOT_RABBITMQ_HOST: rabbitmq
             PINGU_TRAIN_BOT_RABBITMQ_PORT: 5672
             PINGU_TRAIN_BOT_RABBITMQ_USERNAME: user
@@ -42,8 +42,8 @@ services:
             PINGU_TRAIN_WORKER_MONGODB_PORT: 27017
             PINGU_TRAIN_WORKER_MONGODB_USERNAME: root
             PINGU_TRAIN_WORKER_MONGODB_PASSWORD: 12345
-            PINGU_TRAIN_WORKER_QUEUE_UPDATES: updates
-            PINGU_TRAIN_WORKER_QUEUE_ACTIONS: actions
+            PINGU_TRAIN_WORKER_QUEUE_MESSAGES: userMessages
+            PINGU_TRAIN_WORKER_QUEUE_ACTIONS: botActions
             PINGU_TRAIN_WORKER_RABBITMQ_HOST: rabbitmq
             PINGU_TRAIN_WORKER_RABBITMQ_PORT: 5672
             PINGU_TRAIN_WORKER_RABBITMQ_USERNAME: user
